adding google analytics

--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,15 @@
 		<meta name="theme-color" content="#facc15" media="(prefers-color-scheme: light)" />
 		<meta name="theme-color" content="#3730a3" media="(prefers-color-scheme: dark)" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-VNRH0FM21D"></script>
+			<script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+				gtag('config', 'G-VNRH0FM21D');
+			</script>
 		<script nonce="swyx">
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			if (
